Fixed spacing between multiforms because of line-height

--- a/src/styles/_columnManager.scss
+++ b/src/styles/_columnManager.scss
@@ -62,10 +62,6 @@
       flex-direction: column;
       // height: 600px;
       //align-items: center;
-
-      .multiform {
-        // margin-bottom: -19px;
-      }
     }
   }
 }
@@ -76,17 +72,4 @@
 
 .vislist {
   display: none;
-}
-
-.multiformList {
-  //display: flex;
-  margin-bottom: -9px;
-}
-
-.content {
-  //margin-bottom: -6px;
-}
-
-.phovea-list {
-  margin-bottom: -9px;
 }
